# Structure-builder

./: .gitignore  README.md  pyproject.toml  run_gui.py
src/anastruct_simple_app/: __init__.py  examples.py  models.py  parsers.py  qt_styles.py  qt_ui.py  solver.py  ui.py
