[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anastruct-simple-app"
version = "0.1.0"
description = "A simple packaged desktop app for shear, axial force and bending moment calculation with anaStruct."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "anastruct>=1.0,<2.0",
  "matplotlib>=3.8,<4.0",
  "PySide6>=6.8,<7.0",
]

[project.scripts]
anastruct-simple-app = "anastruct_simple_app.ui:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
